<resources>
    <string name="app_name">Aditya Cable Billing </string>

    <!--URL Strings-->
    <string name="BASE_URL">https://efunhub.in/cabelbilling/api/</string>

    <!--General Strings-->
    <string name="currency">\u20B9</string>

    <!--Main Activity(Dashboard)-->
    <string name="dashboard_card_label_history">History</string>
    <string name="dashboard_card_label_plan">Plans</string>
    <string name="dashboard_card_current_plan_details">Current Plan Details</string>
    <string name="label_pay_now">Pay Now</string>
    <string name="label_due_balance">Due Balance</string>
    <string name="label_account">Account</string>
    <string name="more_details">More Details</string>

    <!--Login Activity-->
    <string name="forgot_your_password">Forgot Password?</string>
    <string name="button_login">Login</string>
    <string name="Password">Password</string>
    <string name="UserId">Mobile No.</string>
    <string name="forgot_email_id">Email Id</string>
    <string name="forgot_password_heading">Please enter your registered email id</string>

    <!--Account Activity-->
    <string name="label_personal_details">Personal Details</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_agent_details">Agent Details</string>
    <string name="button_ok">OK</string>
    <string name="label_new_password">New Password</string>
    <string name="label_old_password">Old Password</string>
    <string name="label_name">Name</string>
    <string name="label_email_id">Email Id</string>
    <string name="label_contact">Contact</string>
    <string name="button_update">Update</string>
    <string name="label_userid">User Id</string>

    <!--Internet Connection Not Available-->
    <string name="label_no_internet">Connection Not Available</string>
    <string name="label_retry">RETRY</string>

    <!--Plans Activity-->
    <string name="label_no_plans_found">No plans found</string>
    <string name="button_buy">BUY</string>
    <string name="label_more_details">More Details</string>
    <string name="label_heading_plan_description">Plan Description</string>
    <string name="label_no_current_plan">You have no plan activated at this moment</string>
    <string name="button_buy_now">Buy Now</string>
    <string name="label_current_plan_details">Current Plan Details</string>

    <!--History Activiyt-->
    <string name="button_purchase">Purchase</string>
    <string name="no_history">You have no purchase history yet...!</string>
    <string name="button_pay">Pay Now</string>

</resources>
