<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="Update Account Details"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ivCloseEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_close_white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewDialog"
                android:text="@string/label_name" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="text" />

            <TextView
                style="@style/TextViewDialog"
                android:text="@string/label_email_id" />

            <EditText
                android:id="@+id/edtMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="textEmailAddress" />

            <TextView
                style="@style/TextViewDialog"
                android:text="@string/label_contact" />

            <EditText
                android:id="@+id/edtContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="number"
                android:maxLength="10" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_ripple_background"
                android:text="@string/button_update"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>