<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="60dp"
                android:src="@drawable/temp_logo" />

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:cardBackgroundColor="#99FFFFFF"
                app:cardCornerRadius="6dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiEdtUserID"
                            style="@style/EditTextStyle"
                            android:hint="@string/UserId"
                            android:inputType="number"
                            android:maxLength="10"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiEdtPassword"
                            style="@style/EditTextStyle"
                            android:hint="@string/Password"

                            android:inputType="textPassword" />
                        <!--<EditText
                            android:id="@+id/edtPassword"
                            style="@style/EdittextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/Password"
                            android:inputType="textPassword" />-->
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnLogin"
                        style="@style/ButtonStyle"
                        android:layout_gravity="center"
                        android:text="@string/button_login" />

                    <TextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/forgot_your_password"
                        android:textSize="14sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
